--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -2,6 +2,7 @@
   width: 37.9vw;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .statistic_container {
   background-color: cornflowerblue;/*потом убрать мб*/
