--- a/covid-dashboard/css/countryStatistic.css
+++ b/covid-dashboard/css/countryStatistic.css
@@ -1,6 +1,10 @@
 .countryStatistic_container__prime{
     width: 20vw;
+    height: 90vh;
 }
 .countryStatistic_container__prime .statistic_container{
-width: 100%;
+    width: 100%;
+height: 80vh;
 }
+.countryStatistic_container__prime .statistic_list{
+    height: 70vh;}
