--- a/covid-dashboard/css/slider.css
+++ b/covid-dashboard/css/slider.css
@@ -1,6 +1,6 @@
 .slider_container {
   width: 100%;
-  height: 20%;
+  height: 10vh;
   background-color: crimson;
   display: flex;
   justify-content: space-between;
