--- a/covid-dashboard/css/StatisticItem.css
+++ b/covid-dashboard/css/StatisticItem.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 3em;
+   /* min-height: 3em;*/
     background-color: chartreuse;
     border-top: 2px solid white;
 }
