--- a/covid-dashboard/css/slider.css
+++ b/covid-dashboard/css/slider.css
@@ -1,6 +1,6 @@
 .slider_container {
   width: 100%;
-  height: 6vh;
+  height: 10vh;
   background-color: crimson;
   display: flex;
   justify-content: space-between;
@@ -14,4 +14,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+.slider_nameOfItem{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
