--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -1,14 +1,14 @@
 .statistic_container__prime {
-  width: 37.9vw;
-  height: 50vh;
+  width: 27.4vw;
+  height: 22vh;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 .statistic_container {
   background-color: cornflowerblue;/*потом убрать мб*/
-  width: 12.5vw;
-  height: 40vh;
+  width: 9vw;
+  height: 22vh;
   display: flex;
   flex-direction: column;
 }
@@ -23,8 +23,11 @@
 }
 .statistic_list{
   background-color: aquamarine;/*потом убрать мб*/
-  height: 30vh;
+  height: 12vh;
   width: 100%;
   display: flex;
   flex-direction: column;
+}
+.statisticTable_cases, .statisticTable_deaths, .statisticTable_recovered{
+    height: 3em;
 }
