feat: add background color to choisen country

--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -31,3 +31,6 @@
 .statisticTable_cases, .statisticTable_deaths, .statisticTable_recovered{
     height: 3em;
 }
+.countryStatistic_demo_item__chosen{
+  background-color: darkgreen;
+}
