--- a/covid-dashboard/css/style.css
+++ b/covid-dashboard/css/style.css
@@ -88,7 +88,7 @@ li {
   display        : flex;
   justify-content: space-between;
   width          : 100%;
-  height         : 96vh;
+  height         : 90vh;
 }
 
 @import "./statisticTable";
@@ -98,6 +98,7 @@ li {
 @import "./header";
 @import "./worldMap.css";
 @import "./chart.css";
+@import "./mainGrid.css";
 
 /*
 
