--- a/covid-dashboard/css/mainGrid.css
+++ b/covid-dashboard/css/mainGrid.css
@@ -1,8 +1,25 @@
 .mapChartStatistic_container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 .chartClassСell{
 height: 30vh;
 width: 30vw;
 }
+.сountryStatisticСell, .statisticTableСell, .worldMapСell, .chartClassСell{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+/*
+.statisticTableСell{
+
+}
+.worldMapСell{
+
+}
+.chartClassСell{
+
+}*/
