--- a/covid-dashboard/css/deployerClass.css
+++ b/covid-dashboard/css/deployerClass.css
@@ -32,21 +32,22 @@
     align-self: center;
     width         : 90vw;
     height: 80vh;
+    font-size: 20px;
 }
 .expand .statistic_container__prime{
     align-self: center;
     width         : 90vw;
     height: 80vh;
 }
-.expand .statistic_container{
+.statisticTableСell.expand .statistic_container{
     width: 29.8vw;
-    height: 100%;
+    height: 90%;
 }
-.expand .statistic_list{
-    height: 100%;
+.statisticTableСell.expand .statistic_list{
+    height: 90%;
 }
-.expand .demo_item{
-    font-size: 30px;
+.statisticTableСell.expand .demo_item{
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
