--- a/covid-dashboard/css/header.css
+++ b/covid-dashboard/css/header.css
@@ -1,8 +1,8 @@
 header{
     height: 6vh;
-    padding: 0.5%;
+    width: 100%;
+    padding: 0.1vh;
     background-color: cadetblue;
     display: flex;
     align-items: center;
-    margin: 0.5% 0;
 }
