--- a/covid-dashboard/css/deployerClass.css
+++ b/covid-dashboard/css/deployerClass.css
@@ -1,6 +1,7 @@
 .deployer__container{
+    order: 3;
     position: relative;
-    top: 20px;
+    right: 20px;
     height: 20px;
     width: 20px;
     display: flex;
@@ -32,7 +33,6 @@
     align-self: center;
     width         : 90vw;
     height: 80vh;
-    font-size: 20px;
 }
 .expand .statistic_container__prime{
     align-self: center;
@@ -54,11 +54,19 @@
 }
 
 
-.expand .chart_container{
-    align-self: center;
-    width         : 90vw;
-    height: 80vh;
+.expand .countryStatistic_container__prime .statistic_container {
+    height: 75vh;
 }
 
 
+.expand .chart_container{
+    align-self: center;
+    width         : 90vw;
+    height: 70vh;
+}
 
+
+.hostForChart__expand{
+    height: 50vh;
+    width: 50vw;
+}
