--- a/covid-dashboard/css/mainGrid.css
+++ b/covid-dashboard/css/mainGrid.css
@@ -1,25 +1,15 @@
 .mapChartStatistic_container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-}
-.chartClassСell{
-height: 30vh;
-width: 30vw;
+    height: 90vh;
 }
 .сountryStatisticСell, .statisticTableСell, .worldMapСell, .chartClassСell{
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-start;
 }
-/*
-.statisticTableСell{
+.сountryStatisticСell{
+    width: 18.8vw;
+}
 
-}
 .worldMapСell{
-
+height: 40vh;
 }
-.chartClassСell{
-
-}*/
