--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -47,14 +47,20 @@
 }
 .button_showWorldResult{
   height: 100%;
-  width: 25%;
+  width: 30%;
+  padding-left: 1px;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:  rgb(132, 202, 204);
+  background: linear-gradient(to right, rgb(107, 179, 182), cadetblue);
+  margin-right: 30px;
+}
+.button_showWorldResult:hover{
+  background: linear-gradient(to right, rgb(132, 202, 204), cadetblue);
+  cursor: pointer;
 }
 .statisticTable_header_resultFor{
   height: 100%;
