--- a/covid-dashboard/css/StatisticItem.css
+++ b/covid-dashboard/css/StatisticItem.css
@@ -7,7 +7,7 @@
     border-top: 2px solid white;
 }
 .statistic_list{
-    background-color: aquamarine;/*потом убрать мб*/
+    background-color: rgb(217, 255, 242);
     width: 100%;
     display: flex;
     flex-direction: column;
