--- a/covid-dashboard/css/deployerClass.css
+++ b/covid-dashboard/css/deployerClass.css
@@ -8,12 +8,14 @@
     align-items: center;
     justify-content: center;
     color: white;
-    background-color: rgba(153, 205, 50, 0.3);
+    background-color: rgba(197, 194, 0, 0.5);
     border-radius: 50%;
     z-index: 500;
+    font-size: 20px;
+    font-weight: 600;
 }
 .deployer__container:hover{
-    background-color: rgba(153, 205, 50);
+    background-color:  rgb(197, 194, 0);
     cursor: pointer;
 }
 .expand{
@@ -66,7 +68,3 @@
 }
 
 
-.hostForChart__expand{
-    height: 50vh;
-    width: 50vw;
-}
