--- a/covid-dashboard/css/slider.css
+++ b/covid-dashboard/css/slider.css
@@ -7,6 +7,8 @@
   align-items: center;
   margin-top: -40px;
   z-index: 20;
+  font-size: 16px;
+  color: white;
 }
 .slider_leftArrow, .slider_rightArrow{
   height: 100%;
@@ -21,4 +23,7 @@
   align-items: center;
   text-align: center;
   justify-content: center;
+}
+.statisticTableСell .slider_container{
+  height: 8vh;
 }
