--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -32,7 +32,8 @@
     height: 3em;
 }
 .countryStatistic_demo_item__chosen{
-  background-color: darkgreen;
+  background-color: rgb(197, 194, 0);
+  color: white;
 }
 .statisticTable_header{
   width: 100%;
