--- a/covid-dashboard/css/style.css
+++ b/covid-dashboard/css/style.css
@@ -78,6 +78,7 @@ li {
 }
 
 .wrapper {
+  background-color: rgb(248, 255, 253);
   display       : flex;
   flex-direction: column;
   width         : 98vw;
