--- a/covid-dashboard/css/deployerClass.css
+++ b/covid-dashboard/css/deployerClass.css
@@ -1,9 +1,9 @@
 .deployer__container{
     order: 3;
     position: relative;
-    right: 20px;
-    height: 20px;
-    width: 20px;
+    right: 2vw;
+    height: 2vw;
+    width: 2vw;
     display: flex;
     align-items: center;
     justify-content: center;
