--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -1,5 +1,5 @@
 .statistic_container__prime {
-  width: 27.2vw;
+  width:100%;
   height: 25vh;
   display: flex;
   justify-content: space-between;
