--- a/covid-dashboard/css/countryStatistic.css
+++ b/covid-dashboard/css/countryStatistic.css
@@ -1,11 +1,11 @@
 .countryStatistic_container__prime{
-    width: 19vw;
-    height: 90vh;
+    width:200px;
+    height: 100%;
 }
 .countryStatistic_container__prime .statistic_container{
     width: 100%;
-    height: 90vh;
+    height: 100%;
 }
 .countryStatistic_container__prime .statistic_list{
-    height: 83vh;
+    height: 100%;
 }
