--- a/covid-dashboard/css/deployerClass.css
+++ b/covid-dashboard/css/deployerClass.css
@@ -1,9 +1,9 @@
 .deployer__container{
     order: 3;
     position: relative;
-    right: 2vw;
-    height: 2vw;
-    width: 2vw;
+    right: 20px;
+    height: 20px;
+    width: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,30 +19,46 @@
     cursor: pointer;
 }
 .expand{
-    height: 90vh;
-    width         : 98vw;
+    height: 720px;
+    width         :1020px;
+    position: fixed;
+    z-index: 1000;
+    background-color: white;
+    margin: 0 auto;
+}
+.expand .statistic_container__prime{
+    width: 100%;
+}
+.expand .chart_container{
+    width: 100%;
+}
+/*
+.expand{
+    height: 90%;
+    width         :80%;
     position: absolute;
     z-index: 1000;
-    background-color: white
+    background-color: white;
+    margin: 0 auto;
 }
 
 .expand #mapid{
     align-self: center;
-    width         : 90vw;
-    height: 80vh;
+    width         : 90%;
+    height: 80%;
 }
 .expand .countryStatistic_container__prime{
     align-self: center;
-    width         : 90vw;
-    height: 80vh;
+    width         : 90%;
+    height: 80%;
 }
 .expand .statistic_container__prime{
     align-self: center;
-    width         : 90vw;
-    height: 80vh;
+    width         : 90%;
+    height: 80%;
 }
 .statisticTableСell.expand .statistic_container{
-    width: 29.8vw;
+    width: 29.8%;
     height: 90%;
 }
 .statisticTableСell.expand .statistic_list{
@@ -57,14 +73,15 @@
 
 
 .expand .countryStatistic_container__prime .statistic_container {
-    height: 75vh;
+    height: 100%;
 }
 
 
 .expand .chart_container{
     align-self: center;
-    width         : 90vw;
-    height: 70vh;
+    width         : 80%;
+    height: 100%;
 }
 
 
+*/
