--- a/covid-dashboard/css/mainGrid.css
+++ b/covid-dashboard/css/mainGrid.css
@@ -1,28 +1,29 @@
 .mapChartStatistic_container{
     display: flex;
     flex-wrap: wrap;
-    height: 90vh;
-    width: 62vw;
+    height: 100%;
+    width: 820px;
     justify-content: flex-start;
+    margin-left: 20px;
 }
 .сountryStatisticСell, .statisticTableСell, .worldMapСell, .chartClassСell{
     display: flex;
 }
 .сountryStatisticСell{
-    width: 21vw;
+    width: 220px;
 }
 
 .worldMapСell{
-    width: 61vw;
-    height: 49vh;
-    margin-bottom: 1vh;
+    width: 100%;
+    height: 370px;
+    margin-bottom: 10px;
     display: flex;
 }
 .chartClassСell{
-    width: 32vw;
-    height: 40vh;
+    width: 60%;
+    height: 330px;
 }
 .statisticTableСell{
-    width: 29vw;
-    height: 40vh;
+    width: 40%;
+    height: 330px;
 }
