--- a/covid-dashboard/css/slider.css
+++ b/covid-dashboard/css/slider.css
@@ -1,6 +1,6 @@
 .slider_container {
   width: 100%;
-  height: 5vh;
+  height: 40px;
   background-color: crimson;
   display: flex;
   justify-content: space-between;
@@ -25,5 +25,5 @@
   justify-content: center;
 }
 .statisticTableСell .slider_container{
-  height: 8vh;
+  height: 60px;
 }
