--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -1,14 +1,14 @@
 .statistic_container__prime {
   width:100%;
-  height: 25vh;
+  height: 150px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 .statistic_container {
   background-color: cornflowerblue;/*потом убрать мб*/
-  width: 9vw;
-  height: 19vh;
+  width:33%;
+  height: 120px;
   display: flex;
   flex-direction: column;
 }
@@ -18,7 +18,7 @@
   text-align: center;
   justify-content: center;
   background-color: cadetblue;/*потом убрать мб*/
-  height: 7vh;
+  height: 40px;
   width: 100%;
 }
 .statistic_list{
