--- a/covid-dashboard/css/style.css
+++ b/covid-dashboard/css/style.css
@@ -81,18 +81,16 @@ li {
   background-color: rgb(248, 255, 253);
   display       : flex;
   flex-direction: column;
-  width         : 98vw;
+  width         :  1024px;
+  height         : 768px;
   margin        : 0 auto;
 }
 
 .mainContent_container {
   display        : flex;
   justify-content: space-between;
-
-
-
-  width          : 80vw;
-  height         : 90vh;
+  width          :100%;
+  height         : 710px;
   margin: 0 auto;
 }
 
