--- a/covid-dashboard/css/statisticTable.css
+++ b/covid-dashboard/css/statisticTable.css
@@ -23,7 +23,7 @@
 }
 .statistic_list{
   background-color: aquamarine;/*потом убрать мб*/
-  height: 12vh;
+  height: 100px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -37,7 +37,7 @@
 }
 .statisticTable_header{
   width: 100%;
-  height: 5vh;
+  height: 40px;
   background-color:  cadetblue;
   display: flex;
   align-items: center;
