--- a/covid-dashboard/css/style.css
+++ b/covid-dashboard/css/style.css
@@ -92,7 +92,23 @@ li {
   width          :100%;
   height         : 710px;
   margin: 0 auto;
+
 }
+.hidden{overflow: hidden;}
+
+@media (max-width: 1024px) and (min-width: 500px) {
+
+  .wrapper {
+    height         : 1600px;
+  }
+
+  .mainContent_container {
+    width: 500px;
+    height         : 1400px;
+    flex-direction: column
+  }
+}
+
 
 @import "./statisticTable";
 @import "./StatisticItem";
@@ -105,92 +121,3 @@ li {
 @import "./deployerClass.css";
 @import "./searchBar.css";
 
-/*
-
-
-.casesStatistics_container{
-    display: flex;
-    flex-direction: column;
-    width: 18vw;
-}
-
-.globalCases_container{
-    height: 80px;
-    width: 100%;
-    margin-bottom: 0.5%;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.groupingTypeOfCases_slider_innerContent, .recoveredDeaths_slider_innerContent, .testsAndRatio_slider_innerContent{
-    display: flex;
-    width: 18vw;
-    overflow: hidden;
-}
-.groupingTypeOfCases_container {
-    display: flex;
-    flex-direction: column;
-    min-width: 18vw;
-}
-
-.slider_arrowsContainer{
-    padding: 5%;
-    background-color: tomato;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-    height: 4.5em;
-    border-top: 2px solid white;
-}
-.groupingTypeOfCases_slider__arrowsContainer_nameOfSlide{
-    width: 60%;
-}
-.statistics_item{
-    padding: 5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 3em;
-    background-color: chartreuse;
-    border-top: 2px solid white;
-}
-
-
-
-
-
-.recoveredDeathsTestsSchedule_container{
-    display: flex;
-    flex-direction: column;
-    width: 36.2vw;
-    justify-content: space-between;
-    background-color: aquamarine;
-}
-
-.statistics_title{
-    padding: 5%;
-    background-color: tomato;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    align-items: center;
-    height: 5em;
-    border-top: 2px solid white;
-}
-
-.recovered_container, .deaths_container, .tests_container, .recoveredDeathsRatio_container{
-    min-width: 18vw;
-}
-.recoveredDeaths_container .testsAndRatio_container{
-    width: 18vw;
-}
-.recoveredDeathsRatio_number{
-    text-align: center;
-    font-size: 1.3em;
-    line-height:1.2em;
-    letter-spacing: 0.005em;
-}*/
