--- a/covid-dashboard/css/header.css
+++ b/covid-dashboard/css/header.css
@@ -1,9 +1,18 @@
-header{
-    height: 40px;
-    width: 100%;
-    padding: 0.1vh;
+header {
+    height          : 40px;
+    width           : 100%;
+    padding         : 0.1vh;
     background-color: cadetblue;
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+    display         : flex;
+    align-items     : center;
+    margin-bottom   : 10px;
+    display         : flex;
+    justify-content : space-between;
+    align-items     : center;
+    padding-left    : 0.5em;
+    padding-right   : 0.5em;
+}
+
+.header-date {
+    text-align: right
 }
