--- a/covid-dashboard/css/worldMap.css
+++ b/covid-dashboard/css/worldMap.css
@@ -1,8 +1,16 @@
-#mapid{
+#mapid {
     height: 100%;
-    width: 100%;
+    width : 100%;
 }
 
 .map-flag {
-    width:25px;
+    width: 25px;
+}
+
+.world-map-container {
+    height: 100%;
+    width : 100%;
+    display: flex;
+    flex-direction: column;
+    
 }
