--- a/covid-dashboard/css/worldMap.css
+++ b/covid-dashboard/css/worldMap.css
@@ -1,5 +1,5 @@
 #mapid {
-    height: 100%;
+    height: 330px;
     width : 100%;
 }
 
@@ -12,5 +12,11 @@
     width : 100%;
     display: flex;
     flex-direction: column;
-    
+
 }
+
+.world-map-container .slider_container {
+
+    margin-top: 0px;
+
+  }
